deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simpleapp
  labels:
    app: simpleapp
spec:
  selector:
    matchLabels:
      app: simpleapp
      tier: frontend
  template:
    metadata:
      labels:
        app: simpleapp
        tier: frontend
    spec:
      containers:
      - name: simpleapp
        image: kamranazeem/simpleapp:php-7-apache-2.4
        imagePullPolicy: Always
        ports:
        - containerPort: 80

        resources:
          limits:
            cpu: 10m
            memory: 20Mi
          requests:
            cpu: 5m
            memory: 10Mi

        volumeMounts:
        - mountPath: "/config/"
          name: vol-simpleapp-conf

      volumes:
      - name: vol-simpleapp-conf
        configMap:
          name: configmap-simpleapp-conf
